Project Explorer: Replace "Qt Quick Compiler" with "qmlcachegen"

The latter is now used to compile Qt Quick projects. Also update
the docs accordingly.

Task-number: QTBUG-93766
Change-Id: I22a928bc1acfd3c58ed068fc2d07c36fb57b0a09
Reviewed-by: Vladimir Minenko <vladimir.minenko@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>